--- a/templates/index_anime.html
+++ b/templates/index_anime.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulation de Réunion</title>
-    <link rel="stylesheet" href="/static/style_anime.css">
+    <link rel="stylesheet" href="/static/css/style_anime.css">
 </head>
 <body>
     <div id="chat-container"></div>
