--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <title>Générateur de CR</title>
-
+    <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
   </head>
 
+
+
   <body>
-    <main class="main-container">
+    <form action="/login" method="post">
+        <label for="login">Login :</label>
+        <input type="text" id="login" name="login" required>
+        <br><br>
+        <label for="password">Mot de passe :</label>
+        <input type="password" id="password" name="password" required>
+        <br><br>
+        <button type="submit">Se connecter</button>
+        <div class="espace-vertical"></div>
 
 
-      <header class="header">
-        <h1 class="header-title">Upload :</h1>
-      </header>
-      <form action="/upload" method="post" enctype="multipart/form-data">
-        <label for="file">Sélectionnez une vidéo :</label>
-        <input type="file" name="file" id="file" accept="video/*" required>
-        <button type="submit">Uploader</button>
-      </form>
-
-
-      <script src="{{ url_for('static', filename='js/prompt.js') }}"></script>
-    </main>
+        <button onclick="location.href='/upload';">Passer</button>
+    </form>
   </body>
 </html>
