elle-est-vraiment-bien-celle-la

--- a/templates/index_anime.html
+++ b/templates/index_anime.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulation de Réunion</title>
-    <link rel="stylesheet" href="/static/style_anime.css">
+    <link rel="stylesheet" href="/static/css/style_anime.css">
 </head>
 <body>
     <div id="chat-container"></div>
-    <script src="/static/prompt_anime.js"></script>
+    <script src="/static/js/prompt_anime.js"></script>
 </body>
 </html>
