--- a/templates/signin.html
+++ b/templates/signin.html
@@ -13,7 +13,7 @@
 
 
   <body>
-    <form action="/login" method="post">
+    <form action="/signin" method="post">
         <label for="login">Login :</label>
         <input type="text" id="login" name="login" required>
         <br><br>
@@ -23,7 +23,9 @@
         <button type="submit">Se connecter</button>
         <div class="espace-vertical"></div>
 
+
+
     </form><button onclick="location.href='/upload';">Passer</button>
-    <button onclick="location.href='/signinpage';">Sign In</button>
+    <button onclick="location.href='/';">Retour Login</button>
   </body>
 </html>
