--- a/templates/signinfail.html
+++ b/templates/signinfail.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/static/css/anime.css">
 </head>
 <body>
-    <div id="chat-container"></div>
-    <script src="/static/js/promptanime.js"></script>
+    Sign In Failed <br/>
+
+    <button onclick="location.href='/signinpage';">Retour Signin</button>
+
 </body>
 </html>
